--- a/app/views/_includes/lpa/meta-full-appeal.html
+++ b/app/views/_includes/lpa/meta-full-appeal.html
@@ -31,7 +31,11 @@
     </dt>
     <dd class="govuk-summary-list__value">
       <p class="govuk-body">
-        Written representations
+        {% if data['appeal-type'] != 'inquiry' %}
+          Written representations
+        {% else %}
+          Inquiry
+        {% endif %}
       </p>
     </dd>
   </div>
