--- a/app/views/_includes/lpa/table-final-comments.html
+++ b/app/views/_includes/lpa/table-final-comments.html
@@ -6,7 +6,7 @@
   rows: [
     {
       key: {
-        html: 'Statement text',
+        html: 'Final comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
