--- a/app/views/_includes/lpa/table-full-submission.html
+++ b/app/views/_includes/lpa/table-full-submission.html
@@ -1,10 +1,10 @@
-<h3 class="govuk-heading-m">
+<h3 class="govuk-heading-l">
   Prepare appeal
 </h3>
 
-<h3 class="govuk-heading-m">
+<h4 class="govuk-heading-m">
   Documents
-</h3>
+</h4>
 
 {{ govukSummaryList({
   classes: 'long-answers govuk-!-margin-bottom-9',
