--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,7 +51,7 @@
         </li>
         <li>
           <a href="appeal/proofs-of-evidence">
-            Witnesses and timings / proofs of evidence
+            Witnesses and timings / proof of evidence
           </a>
         </li>
       </ul>
@@ -97,22 +97,22 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=">
+          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
             Planning appeals (summary of progress)
           </a>
         </li>
         <li>
-          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=">
+          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
             Planning appeals (list of appeals)
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             Appeals list, questionnaire done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             Appeals list, statement done
           </a>
         </li>
@@ -126,47 +126,57 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             New appeal
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             Questionnaire due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             Questionnaire valid, statement due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             LPA statement done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=due&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=due&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             All statements done / final comments due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             LPA final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             All final comments done
           </a>
         </li>
         <li>
-          <!-- <a href="?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided="> -->
-            Appeal with proofs of evidence
-          <!-- </a> -->
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided=&appeal-type=inquiry&proofs=due&appellant-proofs=">
+            Appeal with proofs of evidence due
+          </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete">
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided=&appeal-type=inquiry&proofs=complete&appellant-proofs=">
+            Appeal with proofs of evidence complete
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided=&appeal-type=inquiry&proofs=complete&appellant-proofs=complete">
+            Appeal with all (3rd party) proofs of evidence complete
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&appeal-type=&proofs=&appellant-proofs=">
             Appeal decided
           </a>
         </li>
