--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -43,7 +43,19 @@
       <p class="govuk-!-margin-bottom-2">Changes:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          appeals with submitted questionnaires drop down the main list
+          XL headings for appeal views
+        </li>
+        <li>
+          appeal evidence views (submission, statements, final comments etc.)
+        </li>
+        <li>
+          appeal view with different states
+        </li>
+        <li>
+          added procedure to appeal metadata
+        </li>
+        <li>
+          appeals with submitted questionnaires move down the main list
         </li>
         <li>
           added procedure type in meta data
