--- a/app/views/manage/appeals/v8/lpa-statement.html
+++ b/app/views/manage/appeals/v8/lpa-statement.html
@@ -12,12 +12,12 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
 
-    <span class="govuk-caption-l">
+    <span class="govuk-caption-xl">
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
-    <h1 class="govuk-heading-l">
+    <h1 class="govuk-heading-xl">
       Your statement
     </h1>
   </div>
