Appeal submission view

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -97,23 +97,33 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
             Planning appeals (summary of progress)
           </a>
         </li>
         <li>
-          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
             Planning appeals (list of appeals)
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             Appeals list, questionnaire done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
             Appeals list, statement done
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+            Appeals list, final comments done
+          </a>
+        </li>
+        <li>
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+            Appeals list, proof of evidence done
           </a>
         </li>
         <li>
